fix logo font clipping issue

--- a/resources/css/theme.css
+++ b/resources/css/theme.css
@@ -36,7 +36,7 @@
 
 .brilliantportal-logo .text {
     color: white;
-    font-size: 900px;
+    font-size: 890px;
     fill: white;
     font-family: 'Lato';
     font-weight: 400;
